[package]
name = "bundler"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
assert_fs = "1.1.2"
base64 = "0.22.1"
colored = "3.0.0"
dirs = "6.0.0"
lazy_static = "1.5.0"
path-absolutize = "3.1.1"
regex = "1.11.1"
sha = "1.0.3"
swc_atoms = "3.0.2"
swc_bundler = "7.0.0"
swc_common = { version = "5.0.0", features = ["tty-emitter", "sourcemap"] }
swc_ecma_ast = "5.0.1"
swc_ecma_codegen = "5.0.1"
swc_ecma_loader = "5.0.0"
swc_ecma_parser = "6.0.1"
swc_ecma_transforms_base = "7.0.0"
swc_ecma_transforms_typescript = "7.0.0"
swc_ecma_transforms_react = "7.0.0"
ureq = { version = "2.12.1", features = ["charset"] }
url = "2.5.4"
serde_json = "1.0.140"
