[package]
name = "dino"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
askama = "0.13.1"
blake3 = "1.8.1"
bundler = {workspace = true}
clap = { version = "4.5.36", features = ["derive"] }
dialoguer = { version = "0.11.0", features =[
    "completion",
    "fuzzy-matcher",
    "fuzzy-select",
    "history",
] }
dino-server = { workspace = true }
enum_dispatch = "0.3.13"
git2 = "0.20.1"
glob = "0.3.2"
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
notify = "8.0.0"
notify-debouncer-mini = "0.6.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
